--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World
+Kuang Gong, Ph.D Candidate [Curriculum vitae]
+
+B.S, Information Science and Electronic Engineering, Zhejiang University
+
+M.S, Statistics, University of California, Davis
+
+Email: kugong. at. ucdavis.edu
+
+About Me
+
+I  am a Ph.D candidate in Department of Biomedical Engineering, UC DAVIS, working on medical image reconstruction under the supervision of Prof. Jinyi Qi. I received my B.S from Information Science and Electronic Engineering (ISEE) from Zhejiang University in 2011 and M.S in statistics from UC DAVIS in 2015 .
+My research interests mainly lie in medical imaging, including PET system modeling,  Monte Carlo Simulation and dynamic imaging. 
+Journal Papers
+
+K. Gong, S. Cherry, J. Qi, “On the Assessment of Spatial Resolution of PET System with Iterative Image Reconstruction”, Physics in medicine and biology, 2016, 61(5): N193.
+K. Gong, S. Majewski, P. E. Kinahan, R. L. Harrison, B. F. Elston, R. Manjeshwar, S. Dolinsky, A. V. Stolin, J. A. Brefczynski-Lewis and J. Qi, “Designing a compact high performance brain PET scanner—simulation study”, Physics in medicine and biology, 2016, 61(10): 3681. (Featured Article, reported in medicalphysicsweb)
+K. Gong, J. Zhou, M. Tohme, M. S. Judenhofer, Y. Yang and J. Qi, “Sinogram Blurring Matrix Estimation from Point Sources Measurements with Rank-One Approximation for Fully 3D PET” (submitted to IEEE Transaction on Medical Imaging)
+Conference
+
+K. Gong, J. Zhou, M. Tohme, J. Qi, “Estimation of Sinogram Blurring Matrix for Inveon microPET from Point Source Scans”, IEEE NSS-MIC 2012 
+K. Raychaudhuri, A. Mitra, K. Gong, J. Zhou, J. Qi, S. P. Raychaudhuri and A. J. Chaudhari, “In vivo quantification of joint inflammation in a murine arthritis model by anatomolecular imaging”, American College of Rheumatology Annual Meeting 2012
+K. Gong, S. Cherry, J. Qi, “On the Assessment of Spatial Resolution of PET System with Iterative Image Reconstruction”, IEEE NSS-MIC 2013
+K. Gong, J. Zhou, J. Qi, “Sinogram Blurring Matrix Estimation from Point Sources Measurements with Rank-One Approximation”, IEEE NSS-MIC 2014 (Oral, Slides)
+K. Gong, Y. Wu, F. Daghighian and J. Qi, “Study of a novel-geometry PET scanner”, The 13th International Meeting on Fully Three-Dimensional Image Reconstruction in Radiology and Nuclear Medicine, 2015
+K. Gong, S. Majewski, P. E. Kinahan, R. L. Harrison, B. F. Elston, R. Manjeshwar, S. Dolinsky, A. V. Stolin, J. A. Brefczynski-Lewis and J. Qi, “Simulation Study for Designing a Compact Brain PET Scanner”, IEEE NSS-MIC 2015 (Oral, slides)
+Z. Kyme, K. Gong, M. S. Judenhofer, J. Qi, S. R. Meikle and S. R. Cherry, “Open-Field Mouse Brain PET: Design Considerations and Detector Development”, IEEE NSS-MIC 2015 (Oral)
+A. Brefczynski-lewis, S. Majewski, R. Manjeshwar, A. Stolin, P. Kinahan, J. Qi, S. Dolinsky, R. Harrison, M. Rishel, B. Elston, K. Gong, K. Vaigneur, “AMPET: a brain initiative planning project to design a wearable, microdose pet imager”, SfN's 45th annual meeting, 2015
+A. Brefczynski-Lewis, C. Bauer, P. Kinahan, J. Qi, S. Dolinsky, K. Gong, B. Elston, R. Harrison, S. Majewski, “Simulation, detector and prototype testing of a wearable PET scanner for human brain imaging”, HBM 2016
+K. Gong, G. Wang, K. T. Chen, C. Catana and J. Qi, “Dynamic PET Reconstruction Using the Kernel Method with MRI Information”, IEEE NSS-MIC 2016 (accepted as Oral)
+K. Gong, S. Majewski, P. E. Kinahan, R. L. Harrison, B. F. Elston, R. Manjeshwar, S. Dolinsky, A. V. Stolin, J. A. Brefczynski-Lewis and J. Qi, “Performance Evaluation of a Helmet Brain PET”, IEEE EMBC 2016
+K. Gong, G. Wang, K. T. Chen, C. Catana and J. Qi, “Patlak PET Reconstruction Using the Kernel Method with MRI Information”, the 17th annual UC system wide bioengineering symposium, 2016 (Oral, slides)
+K. Gong, G. Wang, K. T. Chen, C. Catana and J. Qi, “Nonlinear PET Parametric Image Reconstruction with MRI Information Using Kernel Method”, 2017 SPIE Medical imaging (submitted)
+Awards
+
+UC Davis Summer Graduate Student Researcher Award, 2016
+Fully 3D Image Reconstruction Conference Travel Award, 2013,2015
+IEEE NSS-MIC Conference Travel Award, 2014, 2015
+Genentech Scholarship, 2012
+UC Davis Earle C Anthony Fellowship, 2011
+First Prize Scholarship of Research and Innovation, Zhejiang University, 2010
+Excellent Academic Achievements scholarship of Zhejiang University all three years, 2008, 2009, 2010
+Activities
+
+Reviewer for IEEE Transaction on Nuclear Medicine (TNS), IEEE Transaction on Computational Imaging (TCI), IEEE Transactions on Radiation and Plasma Medical Sciences (TRPMS), IEEE NSS-MIC 2016. 
+President, Chinese Students and Scholars Association at UC Davis, 2013-2014.
